// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstructionCard should render properly 1`] = `
<Component
  className="extraClass"
  icon="icon"
  index={0}
  instruction={
    Object {
      "displayName": "displayName",
      "id": "instructionId",
      "sBrickCommand": 0,
    }
  }
>
  <Component
    draggableId="instructionId"
    index={0}
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col instruction-card  extraClass"
          style={Object {}}
        >
          <LayoutRow
            className="instruction-card__detail"
            componentClass="div"
          >
            <div
              className="instruction-card__detail row"
            >
              <LayoutCol
                componentClass="div"
                sm={2}
              >
                <div
                  className="col col-sm-2"
                  sm={2}
                >
                  <img
                    className="instruction-card__icon"
                    src="icon"
                  />
                </div>
              </LayoutCol>
              <LayoutCol
                componentClass="div"
                sm={8}
              >
                <div
                  className="col col-sm-8"
                  sm={8}
                >
                  <span
                    className="instruction-card__label"
                  >
                    displayName
                  </span>
                </div>
              </LayoutCol>
              <LayoutCol
                componentClass="div"
                sm={2}
              >
                <div
                  className="col col-sm-2"
                  sm={2}
                >
                  <i
                    className="instruction-card__label-aft-icon fas fa-arrows-alt"
                  />
                </div>
              </LayoutCol>
            </div>
          </LayoutRow>
        </div>
      </div>
    </div>
  </Component>
</Component>
`;

exports[`InstructionCard should render properly when dragging 1`] = `
<Component
  className="extraClass"
  icon="icon"
  index={0}
  instruction={
    Object {
      "displayName": "displayName",
      "id": "instructionId",
      "sBrickCommand": 0,
    }
  }
>
  <Component
    draggableId="instructionId"
    index={0}
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col instruction-card instruction-card--is-dragging extraClass extraClass--is-dragging"
          style={Object {}}
        >
          <LayoutRow
            className="instruction-card__detail"
            componentClass="div"
          >
            <div
              className="instruction-card__detail row"
            >
              <LayoutCol
                componentClass="div"
                sm={2}
              >
                <div
                  className="col col-sm-2"
                  sm={2}
                >
                  <img
                    className="instruction-card__icon"
                    src="icon"
                  />
                </div>
              </LayoutCol>
              <LayoutCol
                componentClass="div"
                sm={8}
              >
                <div
                  className="col col-sm-8"
                  sm={8}
                >
                  <span
                    className="instruction-card__label"
                  >
                    displayName
                  </span>
                </div>
              </LayoutCol>
              <LayoutCol
                componentClass="div"
                sm={2}
              >
                <div
                  className="col col-sm-2"
                  sm={2}
                >
                  <i
                    className="instruction-card__label-aft-icon fas fa-arrows-alt"
                  />
                </div>
              </LayoutCol>
            </div>
          </LayoutRow>
        </div>
      </div>
    </div>
  </Component>
</Component>
`;
